--- a/src/styles.css
+++ b/src/styles.css
@@ -1,7 +1,282 @@
-@import '../node_modules/bulma/css/bulma.css';
+@import '../node_modules/font-awesome/css/font-awesome.css';
+@import '../node_modules/bulma/css/bulma.min.css';
+
+body {
+    font-family: 'VT323', monospace;
+    font-size: 16px;
+}
 
 #app {
     max-width: 500px;
     margin-top: 30px;
 }
   
+#screen-0 {
+    display: none;
+  }
+#screen-1 {
+    display:block;
+}
+  #poke-reaction {
+    border: solid 1px #999;
+  }
+  #score-box {
+    border: solid 1px #999;
+  }
+  #score-box-target {
+    font-size: 85%;
+  }
+  .berry-box {
+  
+  }
+  img.berry {
+    border: solid 1px #999;
+    border-radius: 50%;
+    padding: 15px;
+    background-color: #fff;
+  }
+  img.berry:hover {
+    cursor: pointer;
+    background-color: #ccc;
+    animation: shake 0.82s cubic-bezier(.36,.07,.19,.97) both;
+  transform: translate3d(0, 0, 0);
+  backface-visibility: hidden;
+  perspective: 1000px;
+  }
+  img.berry.shake-berry {
+    animation: shake 0.82s cubic-bezier(.36,.07,.19,.97) both;
+  transform: translate3d(0, 0, 0);
+  backface-visibility: hidden;
+  perspective: 1000px;
+  }
+  
+  
+  
+  @keyframes shake {
+    10%, 90% {
+      transform: translate3d(-1px, 0, 0);
+    }
+    
+    20%, 80% {
+      transform: translate3d(2px, 0, 0);
+    }
+  
+    30%, 50%, 70% {
+      transform: translate3d(-4px, 0, 0);
+    }
+  
+    40%, 60% {
+      transform: translate3d(4px, 0, 0);
+    }
+  }
+  
+  .canvas-weave {
+    background-size: 400px 200px;
+    background-repeat: repeat;
+    background-image: linear-gradient(
+      to right, 
+      hsla(41,30%,87%, .2) 1%,
+      hsla(36,42%,73%,.2) 2%,
+      hsla(36,42%,73%,.2) 3%,
+      hsla(58,30%,85%,.2) 4%,
+      hsla(41,30%,87%, .2) 5%,
+      hsla(36,42%,73%,.2) 6%,
+      hsla(36,42%,73%,.2) 7%,
+      hsla(58,30%,85%,.2) 8%,
+      hsla(41,30%,87%, .2) 9%,
+      hsla(36,42%,73%,.2) 10%,
+      hsla(36,42%,73%,.2) 11%,
+      hsla(58,30%,85%,.2) 12%,
+      hsla(41,30%,87%, .2) 13%,
+      hsla(36,42%,73%,.2) 14%,
+      hsla(36,42%,73%,.2) 15%,
+      hsla(58,30%,85%,.2) 16%,
+      hsla(41,30%,87%, .2) 17%,
+      hsla(36,42%,73%,.2) 18%,
+      hsla(36,42%,73%,.2) 19%,
+      hsla(58,30%,85%,.2) 20%,
+      hsla(41,30%,87%, .2) 21%,
+      hsla(36,42%,73%,.2) 22%,
+      hsla(36,42%,73%,.2) 23%,
+      hsla(58,30%,85%,.2) 24%,
+      hsla(41,30%,87%, .2) 25%,
+      hsla(36,42%,73%,.2) 26%,
+      hsla(36,42%,73%,.2) 27%,
+      hsla(58,30%,85%,.2) 28%,
+      hsla(41,30%,87%, .2) 29%,
+      hsla(36,42%,73%,.2) 30%,
+      hsla(36,42%,73%,.2) 31%,
+      hsla(58,30%,85%,.2) 32%,
+      hsla(255,30%,87%, .2) 33%,
+      hsla(36,42%,73%,.2) 34%,
+      hsla(36,42%,73%,.2) 35%,
+      hsla(58,30%,85%,.2) 36%,
+      hsla(255,30%,87%, .2) 37%,
+      hsla(36,42%,73%,.2) 38%,
+      hsla(36,42%,73%,.2) 39%,
+      hsla(58,30%,85%,.2) 40%,
+      hsla(41,30%,87%, .2) 41%,
+      hsla(36,42%,73%,.2) 42%,
+      hsla(36,42%,73%,.2) 43%,
+      hsla(58,30%,85%,.2) 44%,
+      hsla(41,30%,87%, .2) 45%,
+      hsla(36,42%,73%,.2) 46%,
+      hsla(36,42%,73%,.2) 47%,
+      hsla(58,30%,85%,.2) 48%,
+      hsla(41,30%,87%, .2) 49%,
+      hsla(36,42%,73%,.2) 50%,
+      hsla(36,42%,73%,.2) 51%,
+      hsla(255,30%,85%,.2) 52%,
+      hsla(41,30%,87%, .2) 53%,
+      hsla(36,42%,73%,.2) 54%,
+      hsla(36,42%,73%,.2) 55%,
+      hsla(58,30%,85%,.2) 56%,
+      hsla(41,30%,87%, .2) 57%,
+      hsla(36,42%,73%,.2) 58%,
+      hsla(36,42%,73%,.2) 59%,
+      hsla(58,30%,85%,.2) 60%,
+      hsla(41,30%,87%, .2) 61%,
+      hsla(36,42%,73%,.2) 62%,
+      hsla(36,42%,73%,.2) 63%,
+      hsla(58,30%,85%,.2) 64%,
+      hsla(41,30%,87%, .2) 65%,
+      hsla(36,42%,73%,.2) 66%,
+      hsla(36,42%,73%,.2) 67%,
+      hsla(58,30%,85%,.2) 68%,
+      hsla(41,30%,87%, .2) 69%,
+      hsla(36,42%,73%,.2) 70%,
+      hsla(36,42%,73%,.2) 71%,
+      hsla(58,30%,85%,.2) 72%,
+      hsla(41,30%,87%, .2) 73%,
+      hsla(36,42%,73%,.2) 74%,
+      hsla(36,42%,73%,.2) 75%,
+      hsla(58,30%,85%,.2) 76%,
+      hsla(41,30%,87%, .2) 77%,
+      hsla(36,42%,73%,.2) 78%,
+      hsla(36,42%,73%,.2) 79%,
+      hsla(58,30%,85%,.2) 80%,
+      hsla(41,30%,87%, .2) 81%,
+      hsla(36,42%,73%,.2) 82%,
+      hsla(36,42%,73%,.2) 83%,
+      hsla(58,30%,85%,.2) 84%,
+      hsla(41,30%,87%, .2) 85%,
+      hsla(36,42%,73%,.2) 86%,
+      hsla(36,42%,73%,.2) 87%,
+      hsla(58,30%,85%,.2) 88%,
+      hsla(41,30%,87%, .2) 89%,
+      hsla(36,42%,73%,.2) 90%,
+      hsla(36,42%,73%,.2) 91%,
+      hsla(58,30%,85%,.2) 92%,
+      hsla(255,30%,87%, .2) 93%,
+      hsla(36,42%,73%,.2) 94%,
+      hsla(36,42%,73%,.2) 95%,
+      hsla(58,30%,85%,.2) 96%,
+      hsla(41,30%,87%, .2) 97%,
+      hsla(36,42%,73%,.2) 98%,
+      hsla(36,42%,73%,.2) 99%,
+      hsla(58,30%,85%,.2) 100%
+      ),
+      linear-gradient(
+      to bottom, 
+      hsla(41,30%,87%, .2) 1%,
+      hsla(36,42%,73%,.2) 2%,
+      hsla(36,42%,73%,.2) 3%,
+      hsla(58,30%,85%,.2) 4%,
+      hsla(41,30%,87%, .2) 5%,
+      hsla(36,42%,73%,.2) 6%,
+      hsla(11,64%,83%,.2) 7%,
+      hsla(5,30%,75%,.2) 8%,
+      hsla(41,30%,87%, .2) 9%,
+      hsla(36,42%,73%,.2) 10%,
+      hsla(36,42%,73%,.2) 11%,
+      hsla(58,30%,85%,.2) 12%,
+      hsla(41,30%,87%, .2) 13%,
+      hsla(36,42%,73%,.2) 14%,
+      hsla(36,42%,73%,.2) 15%,
+      hsla(58,30%,85%,.2) 16%,
+      hsla(41,30%,87%, .2) 17%,
+      hsla(36,42%,73%,.2) 18%,
+      hsla(36,42%,73%,.2) 19%,
+      hsla(58,30%,85%,.2) 20%,
+      hsla(41,30%,87%, .2) 21%,
+      hsla(36,42%,73%,.2) 22%,
+      hsla(36,42%,73%,.2) 23%,
+      hsla(58,30%,85%,.2) 24%,
+      hsla(41,30%,87%, .2) 25%,
+      hsla(36,42%,73%,.2) 26%,
+      hsla(36,42%,73%,.2) 27%,
+      hsla(58,30%,85%,.2) 28%,
+      hsla(41,30%,87%, .2) 29%,
+      hsla(36,42%,73%,.2) 30%,
+      hsla(36,42%,73%,.2) 31%,
+      hsla(58,30%,85%,.2) 32%,
+      hsla(5,30%,77%, .2) 33%,
+      hsla(36,42%,73%,.2) 34%,
+      hsla(36,42%,73%,.2) 35%,
+      hsla(58,30%,85%,.2) 36%,
+      hsla(41,30%,87%, .2) 37%,
+      hsla(36,42%,73%,.2) 38%,
+      hsla(36,42%,73%,.2) 39%,
+      hsla(58,30%,85%,.2) 40%,
+      hsla(41,30%,87%, .2) 41%,
+      hsla(36,42%,73%,.2) 42%,
+      hsla(36,42%,73%,.2) 43%,
+      hsla(58,30%,85%,.2) 44%,
+      hsla(41,30%,87%, .2) 45%,
+      hsla(36,42%,73%,.2) 46%,
+      hsla(36,42%,73%,.2) 47%,
+      hsla(58,30%,85%,.2) 48%,
+      hsla(41,30%,87%, .2) 49%,
+      hsla(36,42%,73%,.2) 50%,
+      hsla(36,42%,73%,.2) 51%,
+      hsla(58,30%,85%,.2) 52%,
+      hsla(41,30%,87%, .2) 53%,
+      hsla(36,42%,73%,.2) 54%,
+      hsla(36,42%,73%,.2) 56%,
+      hsla(58,30%,85%,.2) 56%,
+      hsla(41,30%,87%, .2) 57%,
+      hsla(36,42%,73%,.2) 58%,
+      hsla(36,42%,73%,.2) 59%,
+      hsla(58,30%,85%,.2) 60%,
+      hsla(41,30%,87%, .2) 61%,
+      hsla(36,42%,73%,.2) 62%,
+      hsla(36,42%,73%,.2) 63%,
+      hsla(58,30%,85%,.2) 64%,
+      hsla(41,30%,87%, .2) 65%,
+      hsla(36,42%,73%,.2) 66%,
+      hsla(36,42%,73%,.2) 67%,
+      hsla(58,30%,85%,.2) 68%,
+      hsla(41,30%,87%, .2) 69%,
+      hsla(36,42%,73%,.2) 70%,
+      hsla(36,42%,73%,.2) 71%,
+      hsla(58,30%,85%,.2) 72%,
+      hsla(41,30%,87%, .2) 73%,
+      hsla(36,42%,73%,.2) 74%,
+      hsla(36,42%,73%,.2) 75%,
+      hsla(58,30%,85%,.2) 76%,
+      hsla(41,30%,87%, .2) 77%,
+      hsla(11,64%,83%,.2) 78%,
+      hsla(36,42%,73%,.2) 79%,
+      hsla(58,30%,85%,.2) 80%,
+      hsla(41,30%,87%, .2) 81%,
+      hsla(36,42%,73%,.2) 82%,
+      hsla(36,42%,73%,.2) 83%,
+      hsla(58,30%,85%,.2) 84%,
+      hsla(255,30%,87%, .2) 85%,
+      hsla(36,42%,73%,.2) 86%,
+      hsla(36,42%,73%,.2) 87%,
+      hsla(58,30%,85%,.2) 88%,
+      hsla(41,30%,87%, .2) 89%,
+      hsla(36,42%,90%,.2) 90%,
+      hsla(32,75%,95%,.2) 91%,
+      hsla(58,30%,85%,.2) 92%,
+      hsla(41,30%,87%, .2) 93%,
+      hsla(36,42%,73%,.2) 94%,
+      hsla(36,42%,73%,.2) 95%,
+      hsla(58,30%,85%,.2) 96%,
+      hsla(41,30%,87%, .2) 97%,
+      hsla(36,42%,73%,.2) 98%,
+      hsla(36,42%,73%,.2) 99%,
+      hsla(58,30%,85%,.2) 100%
+      );
+  }
